--- a/app/src/main/res/layout/content_basicmap.xml
+++ b/app/src/main/res/layout/content_basicmap.xml
@@ -3,7 +3,7 @@
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
-    <org.osmdroid.views.MapView android:id="@+id/map"
+    <org.osmdroid.views.MapView android:id="@+id/Map"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent" />
 
